--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   },
   "dependencies": {
     "page": "^1.11.6",
-    "sirv-cli": "^2.0.0",
-    "svelte-canvas": "^0.9.3"
+    "sirv-cli": "^2.0.0"
   }
 }
